# ProgettoIA_Fusto_Carida_Bongiovanni

./: LICENSE  README.md
task 2/2-1/: domain1.pddl
task 2/my_planner/: Comandi.txt  domain.pddl  domain2.pddl  plan_problem.pddl_1.SOL  problem.pddl  problem1.pddl  problem2.pddl
task 2/my_planner/src/fr/uga/pddl4j/examples/: MyAStarPlanner.java  Node.java
task 3/3-1/: domain.pddl  problem.pddl
task 3/3-2/robotic_planning/: CMakeLists.txt  package.xml
task 3/3-2/robotic_planning/install/: local_setup.sh  setup.sh
task 3/3-2/robotic_planning/launch/: commands  plansys2_rpl.py
task 3/3-2/robotic_planning/pddl/: domain.pddl  qualityplan
task 3/3-2/robotic_planning/src/: empty_box.cpp  fill_box.cpp  load_carrier.cpp  move_with_carrier.cpp
